Overlap ufo with top of game area by 1 pixel to stop cow showing through.

--- a/css/style.css
+++ b/css/style.css
@@ -111,7 +111,7 @@
 .top_nav {
     width: 100%;
     height: 60px;
-    top: 0;
+    top: -1px; /* overlap top of game area by 1 pixel to stop cow showing through. */
 }
 .ufo {
     position: absolute;
